# eventloop

./: .gitignore  CMakeLists.txt  README.md  event_loop.cpp  event_loop.h  event_loop_controller.h  event_loop_internal_controller.h  timer.cpp  timer.h  timer_handler.h  timer_internal_controller.h
examples/: CMakeLists.txt  main.cpp  periodic_timer.cpp
include/velocizzio/: event_loop.h  timer.h  timer_handler.h
include/velocizzio/detail/: event_loop_internal_controller.h  timer_internal_controller.h
src/: event_loop.cpp  timer.cpp
